--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
-theme: jekyll-theme-minimal
-title: Octocat's homepage
-description: Bookmark this to keep an eye on my project updates!
+url: "https://AmineJml.github.io"
+baseurl: ""
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+  - jekyll-remote-theme
+title: "Amine J. – CS Student & Embedded / Systems Developer"
+description: "Intro about mmyslef"
