--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,17 @@
+title: "Amine Jamal"
+description: "MSc Embedded Systems | BSc Computer Science | Software Developer"
 url: "https://AmineJml.github.io"
 baseurl: ""
+
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
   - jekyll-remote-theme
-title: "Amine J. – CS Student & Embedded / Systems Developer"
-description: "Intro about mmyslef"
+
+author:
+  name: "Amine Jamal"
+  email: "aminejamal003@gmail.com"
+
+linkedin: "https://linkedin.com/in/amine-jamal-a06012220/"
+github: "https://github.com/AmineJml"
+
+show_downloads: false
