--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,15 @@ description: "MSc Embedded Systems | BSc Computer Science | Software Developer"
 url: "https://AmineJml.github.io"
 baseurl: ""
 
-remote_theme: pages-themes/minimal@v0.2.0
+remote_theme: "mmistakes/minimal-mistakes@4.26.2"
+
 plugins:
   - jekyll-remote-theme
+  - jekyll-feed
+  - jekyll-seo-tag
+  - jekyll-sitemap
+
+minimal_mistakes_skin: "dark"
 
 author:
   name: "Amine Jamal"
