--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,7 @@ description: "MSc Embedded Systems | BSc Computer Science | Software Developer"
 url: "https://AmineJml.github.io"
 baseurl: ""
 
-remote_theme: "mmistakes/minimal-mistakes@4.26.2"
-
-plugins:
-  - jekyll-remote-theme
-  - jekyll-feed
-  - jekyll-seo-tag
-  - jekyll-sitemap
+theme: jekyll-theme-midnight
 
 minimal_mistakes_skin: "dark"
 
